Next release

Twitter & Facebook.
More sounds.
Instructions.
Possible changes to Meditation mode.
New particle graphic / animation?

Beta 11

Menu items now change color instead of scaling.
Can now Tweet your score from the Game Over screen.
Sound and music toggles reworded.
High score screen renamed to Records
Records screen now has buttons for game center leaderboard and achievements.
UI Colors Tweaked
It's now possible to get the 4X Bonus achievement.
5X combo achievement removed?
5X bonus achievement added?

Beta 10

Achievements implemented.
Increased minimum match size from 4 to 5.
Accelerator now speeds up in 0.2 second increments so max speed is level 10.
Scoring is now per particle not per set.  This means larger have a higher starting value before applying multipliers.
Game will now pause when it is entering the background state.
Fixed memory leak in SFX loading code.
When available, the Game Center leaderboards will be used when viewing High Scores.
Adjusted shading of LHC map.
Adjusted color of dialog windows.

Beta 9

Can no longer rapid-fire particles to cause them to colide outside of the game.
Fixed bug where new high score would not be indicated on game over screen.
Added audio fade in when switching BGM tracks.
New fonts and colors.
New menu layouts.
High score screen alignment changed.
Modified log message popup animation.
Out-of bounds particle that causes game over will now blink.
Game over flasher now aligned better with detector ring.
Renamed Practice back to Meditation.
Added version string to lower right corner of main menu screen.


Beta 8

Renamed Meditation to Practice.
Added Game Center high score support.
Added shading to artwork and adjusted colors to match icon.
New background music and sound effects.
Moved LHC map.
Log messages now display on top of puzzle.
Moved next piece indicator.
Fixed typo in Accelerator.


Beta 7

Time Attack and Accelerator swapped on main menu screen.
Border of particle sprite is now light instead of dark.